inteegration test package was renamed, benchmarks was improved